ckanext/openafrica/public/openafrica_theme.css
/* ... */
.navbar .nav {
  margin-bottom: 17px;
  float: none;
}

.navbar .btn-navbar {
  position: absolute;
  top: 13px;
  right: 25px;
}

.navbar .btn-navbar, .navbar .btn-navbar:hover {
  background: #FFFFFF;
}

.navbar .btn-navbar .icon-bar {
  background-color: #151f31;
}

.navbar .nav>li>a {
  color: #ffffff;
  text-shadow: none;
  padding: 10px 15px 0px;
  letter-spacing: 1px;
}

.navbar .nav>li>a:focus, .navbar .nav>li>a:hover {
  color: #ffffff;
  text-decoration: none;
}

.nav-collapse.collapse {
  vertical-align: middle;
}

/* .navbar-fixed-top .container {
width: auto !important;
} */

.navbar .nav li.dropdown.open>.dropdown-toggle {
  background-color: #283858;
  color: #ffffff;
}

.dropdown-menu>li>a:hover {
  background: #283858;
}

/* Index search snippet */

.homepage {
  background-color: #121E34;
  color: #ffffff;
}

.homepage .module-search {
  text-align: center;
  padding: 0px;
  background-color: #121E34;
  margin: 0px 0 0 0;
}

.highlighted {
  color: #2F9DE6;
  font-weight: bolder;
}
.homepage .search-form .search-input.search-giant input {
  padding: 25px 100px 25px 20px;
  width: 600px;
  border: none;
  box-shadow: 0px 0px 0px 5px rgba(0,0,0,0.3);
  border-radius: 3px;
  font-size: 24px;
  font-weight: 100;
  line-height: 1.0em;
}

.search-form .search-input.search-giant button {
  margin-top: -14px;
}
.homepage .search-giant {
  display: inline-block;
}

.homepage .module-search .module-content .heading {
  margin: 10px 0px 10px 0px;
  font-size: 2.1em;
  font-weight: 100;
  letter-spacing: 0.05em;
}

.homepage .module-search .module-content h5 {
  margin: 0px 0px 40px 0px;
  font-size: 1.25em;
  font-weight: 100;
  letter-spacing: 0.02em;
  color: #BDBDBD;
}

.homepage .module-search .module-content, .organization-page.module-content {
  padding: 130px 0px;
  margin: 0px;
  height: auto;
  background: url(/bg.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.homepage .joined-orgs-msg {
  padding: 50px 0px 50px 0px;
  color: #fff;
  text-align: center;
  font-weight: 100;
  font-size: 1.2em;
  letter-spacing: 0.05em;
}

.homepage .joined-orgs-msg a {
  color: inherit;
  text-decoration: underline;
}

.search-form {
  border: none;
}

.notice {
  padding: 20px;
}

.homepage .module-search .module-content .notice h5 {
  margin: 5px;
}

.module-content {
  margin: 0px;
  background-color: #EEEEEE;
  padding: 40px 40px;
  border-bottom: 1px solid #BEBEBE;
}


/* who uses it */
.roles {
  padding: 25px 0px 25px 0px;
  text-align: center;
  background-color: #EEEEEE;
  color: #424242;
}

.roles h2, .roles-sample h2 {
  letter-spacing: 0.05em;
  font-weight: 400;
}

.roles p {
  letter-spacing: 0.05em;
  line-height: 1.3em;
  font-size: 21px;
  font-weight: 200;
  color: #858585;
  margin: 10px;
}


div.frame-round {
  padding: 20px 50px;
  border-radius: 3px;
  display: inline-block;
  width: 200px;
}

div.frame-round-white-bg {
  background-color: #ffffff;
}

div.roles-container {
  display: inline-block;
  margin: 3px;
  /* Removes default space between inline blocks
   * check http://css-tricks.com/fighting-the-space-between-inline-block-elements/
   */
  font-size: 0;
}

div.roles-container div {
  font-size: 21px;
}

div.roles-sample {
  text-align: left;
  vertical-align: top;
  padding-top: 60px;
  padding-bottom: 59px;
}

div.roles-sample p {
  margin: 10px 0px;
}

div.roles-sample a {
  color: inherit;
}

div.roles-sample-green-bg {
  background: url(/green_img_bg.png) no-repeat center center;
}

div.roles-sample-yellow-bg {
  background: url(/yellow_img_bg.png) no-repeat center center;
}

div.roles-sample-blue-bg {
  background: url(/blue_img_bg.png) no-repeat center center;
}

div.roles-sample-orange-bg {
  background: url(/orange_img_bg.png) no-repeat center center;
}

div.roles-sample p {
  color: #FFFFFF;
}

a.button {
  color: #ffffff;
  padding: 10px 30px 10px 30px;
  border-radius: 5px;
  box-shadow: 0px 2px 0px 0px rgba(0,0,0,0.5);
  letter-spacing: 0.05em;
  display: inline-block;
  margin: 20px 0px 20px 0px;
  font-size: 21px;
}

a.button:hover {
  text-decoration: none;
}

.button-green {
  background-color: #00CC79;
}

.button-yellow {
  background-color: #ECBC2B;
}

.button-blue {
  background-color: #24AEED;
}

.button-orange {
  background-color: #F06226;
}

a.button-bordered:hover {
  text-decoration: none;
}

a.button-bordered {
  padding: 10px 30px 10px 30px;
  border: 3px solid #A2A2A2;
  border-radius: 3px;
  color: #686868;
  font-size: 1.3em;
  display: inline-block;
  margin: 10px;
}

.collaborators {
  background-color: #FFFFFF;
  padding: 25px 10px 25px 10px;
  color: #858585;
  text-align: center;
}

.collaborators h2 {
  font-weight: 400;
  text-align: center;
}

.collaborators div {
  display: inline-block;
  margin: 10px;
}

.collaborators div img {
  margin: 30px 10px 30px 10px;
  height: 70px;
}

/* Footer */

.site-footer {
  background: #151F31;
  color: #fff;
  font-weight: 200;
  font-size: 1.1em;
  padding: 50px;
}

.site-footer a {
  color: #fff;
}

.site-footer h5 {
  font-weight: 200;
  color: #fff;
}

/* .site-footer .logo {
  text-align: right;
  vertical-align: top;
} */
.site-footer .logo {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.site-footer .logo .copyright{
  padding: 2rem 0;
}

.site-footer label {
  color: #fff;
  font-weight: 200;
  font-size: 1.1em;
}

.footer-links {
  display: flex;
  justify-content: space-between;
}
.footer-links div{
  flex:1
}

.logo-section .logo img{
  width: 300px;
  height: auto;
}
.footer-about{
  margin: 50px 0;
}
.social-links {
  display: flex;
  justify-content: space-between;
}
.social-links a {
  margin: 0 10px;
}

.social-links a img {
  width: 30px;
}

.footer-links .links {
  display: flex;
  justify-content: center;
}

.links ul {
  list-style: none;
}
.links ul li {
 font-weight: bold;
 padding: 10px 0;
}
/* ... */

